<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_multimedia"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/multimedia_menu" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting_menu" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_menu" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black"
            android:title="@string/exit_menu" />

    </group>

</menu>
