<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/general_margin_normal"
    tools:context="sv.com.lyckan.cuentameuncuento.LoginActivity"
    style="@style/Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_image_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        >
        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/TextInputLayout"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_image_2"
        android:layout_below="@id/container_image_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/pass_emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/TextInputLayout"
            app:passwordToggleTint="@color/colorPrimaryLight"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/label_button_logup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:text="@string/button_logup"
        android:textColor="@color/colorPrimaryLight"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_login"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorFontDark"
        android:layout_above="@id/label_button_logup"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>

